--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "pg": "4.x",
     "angular": "^1.5.8",
     "express": "^4.14.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "ejs": "2.3.3",
+    "cool-ascii-faces": "1.3.3"
   },
   "devDependencies": {},
   "scripts": {
